--- a/blog-frontend/src/scss/PageContent/_projectsSection.scss
+++ b/blog-frontend/src/scss/PageContent/_projectsSection.scss
@@ -1,6 +1,6 @@
 $project-container-dimension: 250px;
 
-.project-subsection{
+.project-subsection {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -9,7 +9,7 @@ $project-container-dimension: 250px;
   justify-content: center;
 }
 
-.project-img-container{
+.project-img-container {
   background-color: #333337;
   border-style: solid;
   border-width: medium;
@@ -23,20 +23,19 @@ $project-container-dimension: 250px;
   transition: filter 0.5s;
 }
 
-.project-display-link{
+.project-display-link {
   width: $project-container-dimension;
   height: $project-container-dimension;
   margin: 10px 30px;
-  background-color: red;
 }
 
-.project-img-container:hover{
+.project-img-container:hover {
   cursor: pointer;
   //background-color: #797982;
   filter: brightness(125%);
 }
 
-#she-town-lgo{
+#she-town-lgo {
   padding-top: 70px;
   padding-left: 70px;
   height: 100px;
@@ -51,13 +50,13 @@ $project-container-dimension: 250px;
   color: #ba2ae2;
 }
 
-#indestructible-logo{
+#indestructible-logo {
   height: 150px;
   width: 150px;
   padding: 50px 0px 0px 50px;
 }
 
-#indestructible-text{
+#indestructible-text {
   font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
   font-size: 20px;
   padding-top: 8px;
@@ -66,56 +65,59 @@ $project-container-dimension: 250px;
   letter-spacing: -0.2rem;
 }
 
-#react-calc-text{
-  color: #5fd6ff;
+#react-calc-text {
+  color: #61dbfb;
   font-size: 30px;
   bottom: 90px;
   text-decoration: underline;
 }
 
-#react-calc-logo{
+#react-calc-logo {
   padding-top: 35px;
-  padding-left: 23px;
+  padding-left: 16px;
   width: 210px;
   height: 150px;
 }
 
-#tmf-logo{
+#tmf-logo {
   padding-top: 70px;
   height: 80px;
   padding-left: 5px;
   width: 95%;
 }
 
-.saas-test{
+.saas-test {
 }
 
-.project-header{
+.project-header {
   text-align: center;
   cursor: default;
   position: relative;
   z-index: 0;
   bottom: 60px;
   height: 0px;
-  pointer-events:none;
+  pointer-events: none;
 }
 
-.projects-horizontal-center{
+.projects-horizontal-center {
   display: flex;
   flex-direction: row;
 }
 
 @media only screen and (max-width: 600px) {
-  .project-subsection{
+  .project-subsection {
     flex-direction: row;
     justify-content: center;
     align-content: center;
     margin: 0px auto;
     width: 100%;
   }
-  .projects-horizontal-center{
-    margin: 0px auto;
+  .projects-horizontal-center {
+    //margin: 0px auto;
     display: flex;
     flex-direction: column;
+  }
+  .project-display-link {
+    margin: 10px 0px;
   }
 }
